[package]
name = "ash-molten"
description = "Statically linked MoltenVK for Vulkan on Mac using Ash"
version = "0.8.0+1.1.1-pre"
authors = ["Embark <opensource@embark-studios.com>", "Maik Klein <maik.klein@embark-studios.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["vulkan", "metal"]
categories = ["api-bindings", "rendering", "os::macos-apis"]
repository = "https://github.com/EmbarkStudios/ash-molten"
homepage = "https://github.com/EmbarkStudios/ash-molten"
documentation = "https://docs.rs/ash-molten"

[dependencies]
ash = "0.31"

[build-dependencies]
xcframework = { git = "https://github.com/EmbarkStudios/xcframework", branch = "main" }

[features]
# Build features
# Without build feature enabled MoltenVK will be build from source
external = [] # Supply own MoltenVK lib
pre-built = [] # Download pre-built MoltenVK from github release


[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"
