[package]
name = "ash-molten"
description = "Statically linked MoltenVK for Vulkan on Mac using Ash"
version = "0.10.0+1.1.3"
authors = ["Embark <opensource@embark-studios.com>", "Maik Klein <maik.klein@embark-studios.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["vulkan", "metal"]
categories = ["api-bindings", "rendering", "os::macos-apis"]
repository = "https://github.com/EmbarkStudios/ash-molten"
homepage = "https://github.com/EmbarkStudios/ash-molten"
documentation = "https://docs.rs/ash-molten"
build = "build/build.rs"

[dependencies]
ash = "0.32"

[build-dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
plist = { version = "1.0" }

[features]
# Build features
# Without build feature enabled MoltenVK will be build from source
external = [] # Supply own MoltenVK lib
pre-built = [] # Download pre-built MoltenVK from github release


[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"
